chore: fixed linting issues by running black

--- a/docs/source/concepts.ipynb
+++ b/docs/source/concepts.ipynb
@@ -82,7 +82,8 @@
    ],
    "source": [
     "from skmultilearn.dataset import load_dataset\n",
-    "X, y, _, _ = load_dataset('emotions', 'train')"
+    "\n",
+    "X, y, _, _ = load_dataset(\"emotions\", \"train\")"
    ]
   },
   {
