--- a/docs/source/datasets.ipynb
+++ b/docs/source/datasets.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X, y, feature_names, label_names = load_dataset_dump('_static/example.pkl.bz2')"
+    "X, y, feature_names, label_names = load_dataset_dump(\"_static/example.pkl.bz2\")"
    ]
   },
   {
@@ -100,7 +100,9 @@
     }
    ],
    "source": [
-    "save_dataset_dump(X[:10,:4], y[:10, :3], feature_names[:4], label_names[:3], filename=None)"
+    "save_dataset_dump(\n",
+    "    X[:10, :4], y[:10, :3], feature_names[:4], label_names[:3], filename=None\n",
+    ")"
    ]
   },
   {
@@ -230,7 +232,7 @@
     }
    ],
    "source": [
-    "X, y, feature_names, label_names = load_dataset('scene', 'train')"
+    "X, y, feature_names, label_names = load_dataset(\"scene\", \"train\")"
    ]
   },
   {
@@ -291,7 +293,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_arff_file = '_static/example.arff'\n",
+    "path_to_arff_file = \"_static/example.arff\"\n",
     "label_count = 7"
    ]
   },
@@ -313,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_location=\"end\""
+    "label_location = \"end\""
    ]
   },
   {
@@ -343,10 +345,10 @@
    "outputs": [],
    "source": [
     "X, y = load_from_arff(\n",
-    "    path_to_arff_file, \n",
-    "    label_count=label_count, \n",
+    "    path_to_arff_file,\n",
+    "    label_count=label_count,\n",
     "    label_location=label_location,\n",
-    "    load_sparse=arff_file_is_sparse\n",
+    "    load_sparse=arff_file_is_sparse,\n",
     ")"
    ]
   },
@@ -364,11 +366,11 @@
    "outputs": [],
    "source": [
     "X, y, feature_names, label_names = load_from_arff(\n",
-    "    path_to_arff_file, \n",
-    "    label_count=label_count, \n",
+    "    path_to_arff_file,\n",
+    "    label_count=label_count,\n",
     "    label_location=label_location,\n",
     "    load_sparse=arff_file_is_sparse,\n",
-    "    return_attribute_definitions=True\n",
+    "    return_attribute_definitions=True,\n",
     ")"
    ]
   },
@@ -467,7 +469,7 @@
     }
    ],
    "source": [
-    "print(save_to_arff(X[:10,:4], y[:10, :3], label_location='start', save_sparse=True))"
+    "print(save_to_arff(X[:10, :4], y[:10, :3], label_location=\"start\", save_sparse=True))"
    ]
   }
  ],
