--- a/docs/source/labelrelations.ipynb
+++ b/docs/source/labelrelations.ipynb
@@ -29,8 +29,9 @@
    ],
    "source": [
     "from skmultilearn.dataset import load_dataset\n",
-    "X_train, y_train, feature_names, label_names = load_dataset('emotions', 'train')\n",
-    "X_test, y_test, _, _ = load_dataset('emotions', 'test')"
+    "\n",
+    "X_train, y_train, feature_names, label_names = load_dataset(\"emotions\", \"train\")\n",
+    "X_test, y_test, _, _ = load_dataset(\"emotions\", \"test\")"
    ]
   },
   {
@@ -150,13 +151,14 @@
    "source": [
     "from skmultilearn.cluster import NetworkXLabelGraphClusterer\n",
     "\n",
+    "\n",
     "# we define a helper function for visualization purposes\n",
     "def to_membership_vector(partition):\n",
-    "    return { \n",
-    "        member :  partition_id\n",
-    "        for partition_id, members in enumerate(partition) \n",
+    "    return {\n",
+    "        member: partition_id\n",
+    "        for partition_id, members in enumerate(partition)\n",
     "        for member in members\n",
-    "    }\n"
+    "    }"
    ]
   },
   {
@@ -165,7 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clusterer = NetworkXLabelGraphClusterer(graph_builder, method='louvain')"
+    "clusterer = NetworkXLabelGraphClusterer(graph_builder, method=\"louvain\")"
    ]
   },
   {
@@ -186,7 +188,7 @@
     }
    ],
    "source": [
-    "partition = clusterer.fit_predict(X_train,y_train)\n",
+    "partition = clusterer.fit_predict(X_train, y_train)\n",
     "partition"
    ]
   },
@@ -206,7 +208,8 @@
    "outputs": [],
    "source": [
     "import networkx as nx\n",
-    "names_dict = dict(enumerate(x[0].replace('-','-\\n') for x in label_names))"
+    "\n",
+    "names_dict = dict(enumerate(x[0].replace(\"-\", \"-\\n\") for x in label_names))"
    ]
   },
   {
@@ -216,6 +219,7 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -239,13 +243,13 @@
     "nx.draw(\n",
     "    clusterer.graph_,\n",
     "    pos=nx.circular_layout(clusterer.graph_),\n",
-    "    labels=names_dict, \n",
-    "    with_labels = True,\n",
-    "    width = [10*x/y_train.shape[0] for x in clusterer.weights_['weight']],\n",
-    "    node_color = [membership_vector[i] for i in range(y_train.shape[1])],\n",
+    "    labels=names_dict,\n",
+    "    with_labels=True,\n",
+    "    width=[10 * x / y_train.shape[0] for x in clusterer.weights_[\"weight\"]],\n",
+    "    node_color=[membership_vector[i] for i in range(y_train.shape[1])],\n",
     "    cmap=plt.cm.Spectral,\n",
     "    node_size=100,\n",
-    "    font_size=14\n",
+    "    font_size=14,\n",
     ")"
    ]
   },
@@ -268,8 +272,7 @@
    "outputs": [],
    "source": [
     "classifier = LabelSpacePartitioningClassifier(\n",
-    "    classifier = LabelPowerset(classifier=GaussianNB()),\n",
-    "    clusterer = clusterer\n",
+    "    classifier=LabelPowerset(classifier=GaussianNB()), clusterer=clusterer\n",
     ")"
    ]
   },
@@ -379,7 +382,9 @@
     }
    ],
    "source": [
-    "clusterer_igraph = IGraphLabelGraphClusterer(graph_builder=graph_builder, method='walktrap')\n",
+    "clusterer_igraph = IGraphLabelGraphClusterer(\n",
+    "    graph_builder=graph_builder, method=\"walktrap\"\n",
+    ")\n",
     "partition = clusterer_igraph.fit_predict(X_train, y_train)\n",
     "partition"
    ]
@@ -591,18 +596,18 @@
     }
    ],
    "source": [
-    "\n",
-    "colors = ['red', 'white', 'blue']\n",
+    "colors = [\"red\", \"white\", \"blue\"]\n",
     "membership_vector = to_membership_vector(partition)\n",
     "visual_style = {\n",
-    "    \"vertex_size\" : 20,\n",
+    "    \"vertex_size\": 20,\n",
     "    \"vertex_label\": [x[0] for x in label_names],\n",
-    "    \"edge_width\" : [10*x/y_train.shape[0] for x in clusterer_igraph.graph_.es['weight']],\n",
+    "    \"edge_width\": [\n",
+    "        10 * x / y_train.shape[0] for x in clusterer_igraph.graph_.es[\"weight\"]\n",
+    "    ],\n",
     "    \"vertex_color\": [colors[membership_vector[i]] for i in range(y_train.shape[1])],\n",
-    "    \"bbox\": (400,400),\n",
+    "    \"bbox\": (400, 400),\n",
     "    \"margin\": 80,\n",
-    "    \"layout\": clusterer_igraph.graph_.layout_circle()\n",
-    "    \n",
+    "    \"layout\": clusterer_igraph.graph_.layout_circle(),\n",
     "}\n",
     "\n",
     "ig.plot(clusterer_igraph.graph_, **visual_style)"
@@ -615,8 +620,7 @@
    "outputs": [],
    "source": [
     "classifier = LabelSpacePartitioningClassifier(\n",
-    "    classifier = LabelPowerset(classifier=GaussianNB()),\n",
-    "    clusterer = clusterer_igraph\n",
+    "    classifier=LabelPowerset(classifier=GaussianNB()), clusterer=clusterer_igraph\n",
     ")\n",
     "classifier.fit(X_train, y_train)\n",
     "prediction = classifier.predict(X_test)"
@@ -662,7 +666,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skmultilearn.cluster.graphtool import GraphToolLabelGraphClusterer, StochasticBlockModel"
+    "from skmultilearn.cluster.graphtool import (\n",
+    "    GraphToolLabelGraphClusterer,\n",
+    "    StochasticBlockModel,\n",
+    ")"
    ]
   },
   {
@@ -687,7 +694,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = StochasticBlockModel(nested=False, use_degree_correlation=True, allow_overlap=False, weight_model='real-normal')"
+    "model = StochasticBlockModel(\n",
+    "    nested=False,\n",
+    "    use_degree_correlation=True,\n",
+    "    allow_overlap=False,\n",
+    "    weight_model=\"real-normal\",\n",
+    ")"
    ]
   },
   {
@@ -708,7 +720,9 @@
     }
    ],
    "source": [
-    "clusterer_graphtool = GraphToolLabelGraphClusterer(graph_builder=graph_builder, model=model)\n",
+    "clusterer_graphtool = GraphToolLabelGraphClusterer(\n",
+    "    graph_builder=graph_builder, model=model\n",
+    ")\n",
     "clusterer_graphtool.fit_predict(None, y_train)"
    ]
   },
@@ -750,7 +764,7 @@
     "\n",
     "for i, v in enumerate(clusterer_graphtool.graph_.vertices()):\n",
     "    node_label[v] = label_names[i][0]\n",
-    "    \n",
+    "\n",
     "clusterer_graphtool.model.model_.draw(vertex_text=node_label)"
    ]
   },
@@ -779,8 +793,7 @@
    ],
    "source": [
     "classifier = LabelSpacePartitioningClassifier(\n",
-    "    classifier = LabelPowerset(classifier=GaussianNB()),\n",
-    "    clusterer = clusterer_graphtool\n",
+    "    classifier=LabelPowerset(classifier=GaussianNB()), clusterer=clusterer_graphtool\n",
     ")\n",
     "classifier.fit(X_train, y_train)\n",
     "prediction = classifier.predict(X_test)\n",
@@ -800,7 +813,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = StochasticBlockModel(nested=False, use_degree_correlation=True, allow_overlap=True, weight_model='real-normal')"
+    "model = StochasticBlockModel(\n",
+    "    nested=False,\n",
+    "    use_degree_correlation=True,\n",
+    "    allow_overlap=True,\n",
+    "    weight_model=\"real-normal\",\n",
+    ")"
    ]
   },
   {
@@ -821,7 +839,9 @@
     }
    ],
    "source": [
-    "clusterer_graphtool = GraphToolLabelGraphClusterer(graph_builder=graph_builder, model=model)\n",
+    "clusterer_graphtool = GraphToolLabelGraphClusterer(\n",
+    "    graph_builder=graph_builder, model=model\n",
+    ")\n",
     "clusterer_graphtool.fit_predict(None, y_train)"
    ]
   },
@@ -864,7 +884,7 @@
     "for i, v in enumerate(clusterer_graphtool.graph_.vertices()):\n",
     "    node_label[v] = label_names[i][0]\n",
     "\n",
-    "clusterer_graphtool.model.model_.draw(vertex_text=node_label, vertex_text_color='black')"
+    "clusterer_graphtool.model.model_.draw(vertex_text=node_label, vertex_text_color=\"black\")"
    ]
   },
   {
@@ -890,8 +910,7 @@
    "outputs": [],
    "source": [
     "classifier = MajorityVotingClassifier(\n",
-    "    classifier=LabelPowerset(classifier=GaussianNB()),\n",
-    "    clusterer=clusterer_graphtool\n",
+    "    classifier=LabelPowerset(classifier=GaussianNB()), clusterer=clusterer_graphtool\n",
     ")\n",
     "classifier.fit(X_train, y_train)\n",
     "prediction = classifier.predict(X_test)"
@@ -980,8 +999,7 @@
    "outputs": [],
    "source": [
     "classifier = LabelSpacePartitioningClassifier(\n",
-    "    classifier = LabelPowerset(classifier=GaussianNB()),\n",
-    "    clusterer = matrix_clusterer\n",
+    "    classifier=LabelPowerset(classifier=GaussianNB()), clusterer=matrix_clusterer\n",
     ")"
    ]
   },
@@ -1073,12 +1091,11 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "classifier = MajorityVotingClassifier(\n",
-    "    classifier = LabelPowerset(\n",
-    "        classifier=RandomForestClassifier(n_estimators=100),\n",
-    "        require_dense = [False, True]\n",
+    "    classifier=LabelPowerset(\n",
+    "        classifier=RandomForestClassifier(n_estimators=100), require_dense=[False, True]\n",
     "    ),\n",
-    "    require_dense = [True, True],\n",
-    "    clusterer = FixedLabelSpaceClusterer(clusters=[[0,1, 2], [2, 3 ,4], [0, 4, 5]])\n",
+    "    require_dense=[True, True],\n",
+    "    clusterer=FixedLabelSpaceClusterer(clusters=[[0, 1, 2], [2, 3, 4], [0, 4, 5]]),\n",
     ")\n",
     "\n",
     "# train\n",
