--- a/docs/source/meka.ipynb
+++ b/docs/source/meka.ipynb
@@ -97,8 +97,8 @@
    "source": [
     "from skmultilearn.dataset import load_dataset\n",
     "\n",
-    "X_train, y_train, _, _ = load_dataset('scene', 'train')\n",
-    "X_test,  y_test, _, _ = load_dataset('scene', 'test')"
+    "X_train, y_train, _, _ = load_dataset(\"scene\", \"train\")\n",
+    "X_test, y_test, _, _ = load_dataset(\"scene\", \"test\")"
    ]
   },
   {
@@ -136,10 +136,10 @@
     "from skmultilearn.ext import Meka\n",
     "\n",
     "meka = Meka(\n",
-    "        meka_classifier = \"meka.classifiers.multilabel.BR\", # Binary Relevance\n",
-    "        weka_classifier = \"weka.classifiers.bayes.NaiveBayesMultinomial\", # with Naive Bayes single-label classifier\n",
-    "        meka_classpath = meka_classpath, #obtained via download_meka\n",
-    "        java_command = '/usr/bin/java' # path to java executable\n",
+    "    meka_classifier=\"meka.classifiers.multilabel.BR\",  # Binary Relevance\n",
+    "    weka_classifier=\"weka.classifiers.bayes.NaiveBayesMultinomial\",  # with Naive Bayes single-label classifier\n",
+    "    meka_classpath=meka_classpath,  # obtained via download_meka\n",
+    "    java_command=\"/usr/bin/java\",  # path to java executable\n",
     ")\n",
     "meka"
    ]
