--- a/docs/source/modelselection.ipynb
+++ b/docs/source/modelselection.ipynb
@@ -48,8 +48,8 @@
     }
    ],
    "source": [
-    "X_train, y_train, feature_names, label_names = load_dataset('emotions', 'train')\n",
-    "X_test, y_test, _, _ =load_dataset('emotions', 'test')"
+    "X_train, y_train, feature_names, label_names = load_dataset(\"emotions\", \"train\")\n",
+    "X_test, y_test, _, _ = load_dataset(\"emotions\", \"test\")"
    ]
   },
   {
@@ -111,6 +111,7 @@
    ],
    "source": [
     "import numpy as np\n",
+    "\n",
     "np.unique(y_train.rows).shape, np.unique(y_test.rows).shape"
    ]
   },
@@ -171,6 +172,7 @@
    "outputs": [],
    "source": [
     "from skmultilearn.adapt import MLkNN\n",
+    "\n",
     "classifier = MLkNN(k=3)\n",
     "prediction = classifier.fit(X_train, y_train).predict(X_test)"
    ]
@@ -470,12 +472,12 @@
     "from skmultilearn.adapt import MLkNN\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "parameters = {'k': range(1,3), 's': [0.5, 0.7, 1.0]}\n",
+    "parameters = {\"k\": range(1, 3), \"s\": [0.5, 0.7, 1.0]}\n",
     "\n",
-    "clf = GridSearchCV(MLkNN(), parameters, scoring='f1_macro')\n",
+    "clf = GridSearchCV(MLkNN(), parameters, scoring=\"f1_macro\")\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
-    "print (clf.best_params_, clf.best_score_)"
+    "print(clf.best_params_, clf.best_score_)"
    ]
   },
   {
@@ -532,19 +534,25 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "parameters = {\n",
-    "    'classifier': [LabelPowerset(), ClassifierChain()],\n",
-    "    'classifier__classifier': [RandomForestClassifier()],\n",
-    "    'classifier__classifier__n_estimators': [10, 20, 50],\n",
-    "    'clusterer' : [\n",
-    "        NetworkXLabelGraphClusterer(LabelCooccurrenceGraphBuilder(weighted=True, include_self_edges=False), 'louvain'),\n",
-    "        NetworkXLabelGraphClusterer(LabelCooccurrenceGraphBuilder(weighted=True, include_self_edges=False), 'lpa')\n",
-    "    ]\n",
+    "    \"classifier\": [LabelPowerset(), ClassifierChain()],\n",
+    "    \"classifier__classifier\": [RandomForestClassifier()],\n",
+    "    \"classifier__classifier__n_estimators\": [10, 20, 50],\n",
+    "    \"clusterer\": [\n",
+    "        NetworkXLabelGraphClusterer(\n",
+    "            LabelCooccurrenceGraphBuilder(weighted=True, include_self_edges=False),\n",
+    "            \"louvain\",\n",
+    "        ),\n",
+    "        NetworkXLabelGraphClusterer(\n",
+    "            LabelCooccurrenceGraphBuilder(weighted=True, include_self_edges=False),\n",
+    "            \"lpa\",\n",
+    "        ),\n",
+    "    ],\n",
     "}\n",
     "\n",
-    "clf = GridSearchCV(LabelSpacePartitioningClassifier(), parameters, scoring = 'f1_macro')\n",
+    "clf = GridSearchCV(LabelSpacePartitioningClassifier(), parameters, scoring=\"f1_macro\")\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
-    "print (clf.best_params_, clf.best_score_)"
+    "print(clf.best_params_, clf.best_score_)"
    ]
   },
   {
