--- a/docs/source/multilabeldnn.ipynb
+++ b/docs/source/multilabeldnn.ipynb
@@ -28,8 +28,8 @@
     "import sklearn.metrics as metrics\n",
     "from skmultilearn.dataset import load_dataset\n",
     "\n",
-    "X_train, y_train, feature_names, label_names = load_dataset('emotions', 'train')\n",
-    "X_test, y_test, _, _ = load_dataset('emotions', 'test')"
+    "X_train, y_train, feature_names, label_names = load_dataset(\"emotions\", \"train\")\n",
+    "X_test, y_test, _, _ = load_dataset(\"emotions\", \"test\")"
    ]
   },
   {
@@ -65,15 +65,16 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "\n",
+    "\n",
     "def create_model_single_class(input_dim, output_dim):\n",
-    "\t# create model\n",
-    "\tmodel = Sequential()\n",
-    "\tmodel.add(Dense(12, input_dim=input_dim, activation='relu'))\n",
-    "\tmodel.add(Dense(8, activation='relu'))\n",
-    "\tmodel.add(Dense(output_dim, activation='sigmoid'))\n",
-    "\t# Compile model\n",
-    "\tmodel.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "\treturn model"
+    "    # create model\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(12, input_dim=input_dim, activation=\"relu\"))\n",
+    "    model.add(Dense(8, activation=\"relu\"))\n",
+    "    model.add(Dense(output_dim, activation=\"sigmoid\"))\n",
+    "    # Compile model\n",
+    "    model.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
+    "    return model"
    ]
   },
   {
@@ -105,7 +106,10 @@
     "\n",
     "KERAS_PARAMS = dict(epochs=10, batch_size=100, verbose=0)\n",
     "\n",
-    "clf = BinaryRelevance(classifier=Keras(create_model_single_class, False, KERAS_PARAMS), require_dense=[True,True])\n",
+    "clf = BinaryRelevance(\n",
+    "    classifier=Keras(create_model_single_class, False, KERAS_PARAMS),\n",
+    "    require_dense=[True, True],\n",
+    ")\n",
     "clf.fit(X_train, y_train)\n",
     "result = clf.predict(X_test)"
    ]
@@ -126,13 +130,15 @@
    "outputs": [],
    "source": [
     "def create_model_multiclass(input_dim, output_dim):\n",
-    "\t# create model\n",
-    "\tmodel = Sequential()\n",
-    "\tmodel.add(Dense(8, input_dim=input_dim, activation='relu'))\n",
-    "\tmodel.add(Dense(output_dim, activation='softmax'))\n",
-    "\t# Compile model\n",
-    "\tmodel.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "\treturn model"
+    "    # create model\n",
+    "    model = Sequential()\n",
+    "    model.add(Dense(8, input_dim=input_dim, activation=\"relu\"))\n",
+    "    model.add(Dense(output_dim, activation=\"softmax\"))\n",
+    "    # Compile model\n",
+    "    model.compile(\n",
+    "        loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"]\n",
+    "    )\n",
+    "    return model"
    ]
   },
   {
@@ -149,8 +155,12 @@
    "outputs": [],
    "source": [
     "from skmultilearn.problem_transform import LabelPowerset\n",
-    "clf = LabelPowerset(classifier=Keras(create_model_multiclass, True, KERAS_PARAMS), require_dense=[True,True])\n",
-    "clf.fit(X_train,y_train)\n",
+    "\n",
+    "clf = LabelPowerset(\n",
+    "    classifier=Keras(create_model_multiclass, True, KERAS_PARAMS),\n",
+    "    require_dense=[True, True],\n",
+    ")\n",
+    "clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_test)"
    ]
   },
@@ -206,10 +216,10 @@
    "source": [
     "class SingleClassClassifierModule(nn.Module):\n",
     "    def __init__(\n",
-    "            self,\n",
-    "            num_units=10,\n",
-    "            nonlin=F.relu,\n",
-    "            dropout=0.5,\n",
+    "        self,\n",
+    "        num_units=10,\n",
+    "        nonlin=F.relu,\n",
+    "        dropout=0.5,\n",
     "    ):\n",
     "        super(SingleClassClassifierModule, self).__init__()\n",
     "        self.num_units = num_units\n",
@@ -238,11 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = NeuralNetClassifier(\n",
-    "    SingleClassClassifierModule,\n",
-    "    max_epochs=20,\n",
-    "    verbose=0\n",
-    ")"
+    "net = NeuralNetClassifier(SingleClassClassifierModule, max_epochs=20, verbose=0)"
    ]
   },
   {
@@ -253,8 +259,8 @@
    "source": [
     "from skmultilearn.problem_transform import BinaryRelevance\n",
     "\n",
-    "clf = BinaryRelevance(classifier=net, require_dense=[True,True])\n",
-    "clf.fit(X_train.astype(numpy.float32),y_train)\n",
+    "clf = BinaryRelevance(classifier=net, require_dense=[True, True])\n",
+    "clf.fit(X_train.astype(numpy.float32), y_train)\n",
     "y_pred = clf.predict(X_test.astype(numpy.float32))"
    ]
   },
@@ -280,7 +286,7 @@
    "source": [
     "nodes = 8\n",
     "input_dim = X_train.shape[1]\n",
-    "hidden_dim = int(input_dim/nodes)\n",
+    "hidden_dim = int(input_dim / nodes)\n",
     "output_dim = len(numpy.unique(y_train.rows))"
    ]
   },
@@ -292,11 +298,11 @@
    "source": [
     "class MultiClassClassifierModule(nn.Module):\n",
     "    def __init__(\n",
-    "            self,\n",
-    "            input_dim=input_dim,\n",
-    "            hidden_dim=hidden_dim,\n",
-    "            output_dim=output_dim,\n",
-    "            dropout=0.5,\n",
+    "        self,\n",
+    "        input_dim=input_dim,\n",
+    "        hidden_dim=hidden_dim,\n",
+    "        output_dim=output_dim,\n",
+    "        dropout=0.5,\n",
     "    ):\n",
     "        super(MultiClassClassifierModule, self).__init__()\n",
     "        self.dropout = nn.Dropout(dropout)\n",
@@ -324,11 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "net = NeuralNetClassifier(\n",
-    "    MultiClassClassifierModule,\n",
-    "    max_epochs=20,\n",
-    "    verbose=0\n",
-    ")"
+    "net = NeuralNetClassifier(MultiClassClassifierModule, max_epochs=20, verbose=0)"
    ]
   },
   {
@@ -347,8 +349,9 @@
    ],
    "source": [
     "from skmultilearn.problem_transform import LabelPowerset\n",
-    "clf = LabelPowerset(classifier=net, require_dense=[True,True])\n",
-    "clf.fit(X_train.astype(numpy.float32),y_train)\n",
+    "\n",
+    "clf = LabelPowerset(classifier=net, require_dense=[True, True])\n",
+    "clf.fit(X_train.astype(numpy.float32), y_train)\n",
     "y_pred = clf.predict(X_test.astype(numpy.float32))"
    ]
   }
