--- a/docs/source/multilabelembeddings.ipynb
+++ b/docs/source/multilabelembeddings.ipynb
@@ -41,8 +41,8 @@
     "import sklearn.metrics as metrics\n",
     "from skmultilearn.dataset import load_dataset\n",
     "\n",
-    "X_train, y_train, feature_names, label_names = load_dataset('emotions', 'train')\n",
-    "X_test, y_test, _, _ = load_dataset('emotions', 'test')"
+    "X_train, y_train, feature_names, label_names = load_dataset(\"emotions\", \"train\")\n",
+    "X_test, y_test, _, _ = load_dataset(\"emotions\", \"test\")"
    ]
   },
   {
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skmultilearn.embedding import OpenNetworkEmbedder \n",
+    "from skmultilearn.embedding import OpenNetworkEmbedder\n",
     "from skmultilearn.cluster import LabelCooccurrenceGraphBuilder"
    ]
   },
@@ -88,12 +88,12 @@
     "graph_builder = LabelCooccurrenceGraphBuilder(weighted=True, include_self_edges=False)\n",
     "openne_line_params = dict(batch_size=1000, order=3)\n",
     "embedder = OpenNetworkEmbedder(\n",
-    "    graph_builder, \n",
-    "    'LINE', \n",
-    "    dimension = 5*y_train.shape[1],                            \n",
-    "    aggregation_function = 'add', \n",
-    "    normalize_weights=True, \n",
-    "    param_dict = openne_line_params\n",
+    "    graph_builder,\n",
+    "    \"LINE\",\n",
+    "    dimension=5 * y_train.shape[1],\n",
+    "    aggregation_function=\"add\",\n",
+    "    normalize_weights=True,\n",
+    "    param_dict=openne_line_params,\n",
     ")"
    ]
   },
@@ -150,11 +150,7 @@
     }
    ],
    "source": [
-    "clf = EmbeddingClassifier(\n",
-    "    embedder,\n",
-    "    RandomForestRegressor(n_estimators=10),\n",
-    "    MLkNN(k=5)\n",
-    ")\n",
+    "clf = EmbeddingClassifier(embedder, RandomForestRegressor(n_estimators=10), MLkNN(k=5))\n",
     "\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
@@ -180,13 +176,17 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from skmultilearn.adapt import MLkNN\n",
     "\n",
-    "dimensional_scaler_params = {'n_jobs': -1}\n",
+    "dimensional_scaler_params = {\"n_jobs\": -1}\n",
     "\n",
     "clf = EmbeddingClassifier(\n",
-    "    CLEMS(metrics.jaccard_similarity_score, is_score=True, params=dimensional_scaler_params),\n",
+    "    CLEMS(\n",
+    "        metrics.jaccard_similarity_score,\n",
+    "        is_score=True,\n",
+    "        params=dimensional_scaler_params,\n",
+    "    ),\n",
     "    RandomForestRegressor(n_estimators=10, n_jobs=-1),\n",
     "    MLkNN(k=1),\n",
-    "    regressor_per_dimension= True\n",
+    "    regressor_per_dimension=True,\n",
     ")\n",
     "\n",
     "clf.fit(X_train, y_train)\n",
@@ -215,9 +215,9 @@
     "from skmultilearn.adapt import MLkNN\n",
     "\n",
     "clf = EmbeddingClassifier(\n",
-    "    SKLearnEmbedder(SpectralEmbedding(n_components = 10)),\n",
+    "    SKLearnEmbedder(SpectralEmbedding(n_components=10)),\n",
     "    RandomForestRegressor(n_estimators=10),\n",
-    "    MLkNN(k=5)\n",
+    "    MLkNN(k=5),\n",
     ")\n",
     "\n",
     "clf.fit(X_train, y_train)\n",
