--- a/docs/source/tutorial.ipynb
+++ b/docs/source/tutorial.ipynb
@@ -50,8 +50,8 @@
     }
    ],
    "source": [
-    "X_train, y_train, feature_names, label_names = load_dataset('emotions', 'train')\n",
-    "X_test, y_test, _, _ = load_dataset('emotions', 'test')"
+    "X_train, y_train, feature_names, label_names = load_dataset(\"emotions\", \"train\")\n",
+    "X_test, y_test, _, _ = load_dataset(\"emotions\", \"test\")"
    ]
   },
   {
@@ -166,10 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = BinaryRelevance(\n",
-    "    classifier=SVC(),\n",
-    "    require_dense=[False, True]\n",
-    ")"
+    "clf = BinaryRelevance(classifier=SVC(), require_dense=[False, True])"
    ]
   },
   {
