--- a/tests/CrossValTesting.ipynb
+++ b/tests/CrossValTesting.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.chdir(os.path.dirname(os.getcwd()))"
    ]
   },
@@ -71,10 +72,12 @@
    },
    "outputs": [],
    "source": [
-    "cv = cross_validation.ShuffleSplit(rvc1.data.shape[0], n_iter=3,\n",
-    "                                    test_size=0.3, random_state=0)\n",
-    "scores = cross_validation.cross_val_score(clf, rvc1.data.toarray(), rvc1.target,\n",
-    "                                            cv=cv, scoring='f1_macro')"
+    "cv = cross_validation.ShuffleSplit(\n",
+    "    rvc1.data.shape[0], n_iter=3, test_size=0.3, random_state=0\n",
+    ")\n",
+    "scores = cross_validation.cross_val_score(\n",
+    "    clf, rvc1.data.toarray(), rvc1.target, cv=cv, scoring=\"f1_macro\"\n",
+    ")"
    ]
   },
   {
