chore: removed broken and old CI

--- a/docs/source/developer.ipynb
+++ b/docs/source/developer.ipynb
@@ -94,6 +94,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -101,7 +102,7 @@
     "\n",
     "At the very list you should make sure that your code:\n",
     "\n",
-    "- works on Python 2 and Python 3 on Windows 10/Linux/OSX using travis/appveyor \n",
+    "- works by checking the github action results in your pull request\n",
     "\n",
     "- PEP8 coding guidelines\n",
     "\n",
